Bug 428528 - Share Imgur not working
Summary: Share Imgur not working
Status: RESOLVED FIXED
Alias: None
Product: gwenview
Classification: Applications
Component: general (other bugs)
Version First Reported In: 20.08.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Gwenview Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-10-31 19:12 UTC by medin
Modified: 2020-11-01 11:33 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description medin 2020-10-31 19:12:08 UTC
When I click on share via Imgur inside Gweenview the transfer window opens but after it's closed nothing happens, while when I use share via Imgur inside Spectable It opens the target link inside internet browser.

Operating System: Manjaro Linux
KDE Plasma Version: 5.19.5
KDE Frameworks Version: 5.74.0
Qt Version: 5.15.1
Kernel Version: 5.4.72-1-MANJARO
OS Type: 64-bit
Comment 1 Bug Janitor Service 2020-10-31 21:10:43 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/gwenview/-/merge_requests/21
Comment 2 Nicolas Fella 2020-11-01 11:33:19 UTC
Git commit e5f85e162f5aade8aa038ad2df3da8a450bb31d2 by Nicolas Fella.
Committed on 31/10/2020 at 21:10.
Pushed by nicolasfella into branch 'master'.

Show message bar with URL after sharing to imgur

When sharing an image to imgur (or another target that returns an URL) show that url in a message bar.
Shamelessly stolen^Winspired by Spectacle.

Also use it to report sharing errors.

M  +27   -0    app/mainwindow.cpp

https://invent.kde.org/graphics/gwenview/commit/e5f85e162f5aade8aa038ad2df3da8a450bb31d2