Show message bar with URL after sharing to imgur

When sharing an image to imgur (or another target that returns an URL) show that url in a message bar.
Shamelessly stolen^Winspired by Spectacle.

Also use it to report sharing errors.

BUG: 428528